--- a/templates/index_no_ajax.html
+++ b/templates/index_no_ajax.html
@@ -25,9 +25,12 @@
         </div>
         <div id="navbar" class="navbar-collapse collapse">
 
-            <form id="image_form" action="/" method="post" enctype="multipart/form-data" class="navbar-form navbar-right">
+            <form action="/" method="post" enctype="multipart/form-data" class="navbar-form navbar-right">
                 <div class="form-group">
-                    <input id="image_input" name="file" type="file" multiple class="form-control">
+                    <input name="file" type="file" multiple class="form-control">
+                </div>
+                <div class="form-group">
+                    <input type="submit" value="Subir" class="btn btn-success">
                 </div>
             </form>
         </div><!--/.navbar-collapse -->
@@ -38,20 +41,24 @@
     <div class="container">
         <h1>Image recognition battle</h1>
         <p>Who will win the AI war?</p>
-        <img id="raw_image" class="featurette-image img-responsive center-block" src="" alt="image" style="height: 200px; display: none;" data-holder-rendered="true">
+        {% if filename %}
+        <img class="featurette-image img-responsive center-block" src="static/images/{{ filename }}" alt="image" style="height: 200px" data-holder-rendered="true">
+        {% endif %}
     </div>
 </div>
 
+{% if results %}
+
 <div class="container">
     <div class="row">
-        <div class="col-md-4" id="aws_content">
-
+        <div class="col-md-4">
+            {% include 'aws.html' %}
         </div>
-        <div class="col-md-4" id="gcp_content">
-
+        <div class="col-md-4">
+            {% include 'gcp.html' %}
         </div>
-        <div class="col-md-4" id="azure_content">
-
+        <div class="col-md-4">
+            {% include 'azure.html' %}
         </div>
     </div>
 
@@ -62,50 +69,11 @@
     </footer>
 </div>
 
+{% endif %}
 
 <!-- Latest compiled and minified JavaScript -->
 <script src="https://code.jquery.com/jquery-3.2.1.min.js" integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4=" crossorigin="anonymous"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
-
-<script>
-    function analyze_image(platform, image_id){
-        var panel = $('#'+platform+'_content');
-        panel.html('<img src="static/loading.gif">');
-
-        $.get({
-            url: "/analyze/"+platform+"/"+image_id,
-            async: true
-        }).done(function(data)
-        {
-            console.log(data);
-            panel.html(data);
-        });
-    }
-
-    $(function() {
-        $("#image_input").change(function (){
-            var raw_image = $('#raw_image');
-            raw_image.attr("src", "/static/loading.gif");
-            raw_image.show();
-
-            var form_data = new FormData($('#image_form')[0]);
-            form_data.append('file', $('input[type=file]')[0].files[0]);
-
-            $.post({
-                url: "/upload",
-                data: form_data,
-                contentType: false,
-                processData: false
-            }).done(function(image_id)
-            {
-                raw_image.attr("src", "/static/images/"+image_id);
-                analyze_image('aws', image_id);
-                analyze_image('gcp', image_id);
-                analyze_image('azure', image_id);
-            });
-        });
-    });
-</script>
 
 </body>
 </html>
