Add azure comparison and ajax requests

--- a/templates/aws.html
+++ b/templates/aws.html
@@ -1,8 +1,8 @@
 <h2>AWS</h2>
 
-<h3>Detect labels</h3>
-<ul class="list-group">
-    {% for label in results.aws.detect_labels.Labels %}
+<h3>Labels</h3>
+<ul class="list-group" style="min-height: 450px">
+    {% for label in results.labels.Labels %}
     <li class="list-group-item">
         <span class="badge">{{ label.Confidence|round(2) }}</span>
         {{ label.Name }}
@@ -10,8 +10,8 @@
     {% endfor %}
 </ul>
 
-<h3>Detect faces</h3>
-{% for face in results.aws.detect_faces %}
+<h3>Faces</h3>
+{% for face in results.faces %}
 <div>
     <img class="img-thumbnail" src="static/images/{{ face.img }}" alt="analyzed image">
 </div>
@@ -69,5 +69,5 @@
 {% endfor %}
 
 <h3>Raw</h3>
-<p id="aws_raw" style="display: none">{{ results.aws }}</p>
+<p id="aws_raw" style="display: none">{{ results }}</p>
 <p><a class="btn btn-default" href="#" role="button" onclick="$('#aws_raw').show();return false;">View details »</a></p>
